Creating a branch for a one off patch [JBPAPP-9261]